--- a/templates/tweets/_tweet.html
+++ b/templates/tweets/_tweet.html
@@ -14,11 +14,36 @@
       />
     </a>
     <div class="flex-grow-1">
-      <div class="d-flex align-items-center gap-1">
-        <div class="fw-bold">{{ tweet.user.display_name }}</div>
-        <small class="text-secondary">
-          @{{ tweet.user.username }}・{{ tweet.created_at|date:"m月d日 H:i" }}
-        </small>
+      <div class="d-flex align-items-center justify-content-between">
+        <div class="d-flex gap-1">
+          <div class="fw-bold">{{ tweet.user.display_name }}</div>
+          <small class="text-secondary">
+            @{{ tweet.user.username }}・{{ tweet.created_at|date:"m月d日 H:i" }}
+          </small>
+        </div>
+        <div class="btn-group z-2">
+          <button class="btn text-white" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+            <i class="bi bi-three-dots"></i>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li>
+              <form method="POST" action="{% url 'accounts:follow_toggle' %}">
+                {% csrf_token %}
+                <input type="hidden" name="user_id" value="{{ tweet.user.id }}" />
+                {% if tweet.user.is_followed_by_user %}
+                  <button class="dropdown-item">
+                    {{ tweet.user.username }}さんをフォロー解除する
+                  </button>
+                {% else %}
+                  <button class="dropdown-item">
+                    {{ tweet.user.username }}さんをフォローする
+                  </button>
+                {% endif %}
+              </form>
+            <li>
+          </ul>
+        </div>
+
       </div>
       <div>{{ tweet.content }}</div>
       <!-- 投稿画像があれば表示 -->
