--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,4 +1,4 @@
-<header class="p-3 border-bottom border-secondary">
+<header class="p-3">
   <div class="d-flex align-items-center justify-content-between">
     <div class="fs-4">
       <a href="{% url "tweets:timeline" %}" class="text-white text-decoration-none">
