--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -1,7 +1,4 @@
-<nav
-  class="d-flex flex-column pt-3 text-white"
-  style="width: 240px"
->
+<nav class="d-flex flex-column pt-3 text-white">
   <ul class="nav flex-column gap-2 mb-4 fs-5">
     <li class="nav-item">
       <a href="{% url "tweets:timeline" %}" class="nav-link text-white">
