--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,18 @@
     {% if messages %}
       {% include "_message.html" %}
     {% endif %}
-    <div class="container min-vh-100 d-flex flex-column">
+    <div class="container-fluid min-vh-100 d-flex flex-column" style="max-width: 1280px;">
       {% include "_header.html" %}
-      <div class="d-flex flex-grow-1">
-        {% include "_sidebar.html" %}
-        <main class="flex-grow-1 border-start border-end border-secondary overflow-hidden" style="max-width: 650px">
+      <div class="row flex-grow-1 justify-content-center border-top border-secondary">
+        <div class="d-none d-md-block col-md-3">
+          {% include "_sidebar.html" %}
+        </div>
+        <main class="col-12 col-md-5 border-start border-end border-secondary overflow-hidden p-0">
           {% block content %}{% endblock %}
         </main>
+        <div class="d-none d-md-block col-md-4 p-3">
+          {% include "_trend.html" %}
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
