--- a/templates/tweets/_tweet_action_icons.html
+++ b/templates/tweets/_tweet_action_icons.html
@@ -3,32 +3,54 @@
 <!-- ツイートに対するアクションを行うアイコンエリア -->
 <div class="d-flex justify-content-between align-items-center">
   <i class="bi bi-chat"></i>
+
+  <!-- リツイート -->
   <form method="POST" action="{% url 'tweets:retweet_toggle' %}" class="z-2">
     {% csrf_token %}
     <input type="hidden" name="tweet_id" value="{{ tweet.id }}" />
     <button
       type="submit"
-      class="btn {% if tweet.is_retweeted_by_user %}text-success{% else %}text-white{% endif %} hover-text-success">
+      class="btn {% if tweet.is_retweeted_by_user %}text-success{% else %}text-white{% endif %} hover-text-success"
+    >
       <i class="bi bi-repeat me-1"></i>
       <span>{{ tweet.retweets.count|intcomma|default:0 }}</span>
     </button>
   </form>
 
+  <!-- いいね -->
   <form method="POST" action="{% url 'tweets:like_toggle' %}" class="z-2">
     {% csrf_token %}
     <input type="hidden" name="tweet_id" value="{{ tweet.id }}" />
     <button
       type="submit"
-      class="btn {% if tweet.is_liked_by_user %}text-danger{% else %}text-white{% endif %} hover-text-danger">
+      class="btn {% if tweet.is_liked_by_user %}text-danger{% else %}text-white{% endif %} hover-text-danger"
+    >
       {% if tweet.is_liked_by_user %}
-        <i class="bi bi-heart-fill me-1"></i>
+      <i class="bi bi-heart-fill me-1"></i>
       {% else %}
-        <i class="bi bi-heart me-1"></i>
+      <i class="bi bi-heart me-1"></i>
       {% endif %}
       <span>{{ tweet.likes.count|intcomma|default:0 }}</span>
     </button>
   </form>
-  <i class="bi bi-bookmark"></i>
+
+  <!-- ブックマーク -->
+  <form method="POST" action="{% url 'tweets:bookmark_toggle' %}" class="z-2">
+    {% csrf_token %}
+    <input type="hidden" name="tweet_id" value="{{ tweet.id }}" />
+    <button
+      type="submit"
+      class="btn {% if tweet.is_bookmarked_by_user %}text-primary{% else %}text-white{% endif %} hover-text-primary"
+    >
+      {% if tweet.is_bookmarked_by_user %}
+      <i class="bi bi-bookmark-fill me-1"></i>
+      {% else %}
+      <i class="bi bi-bookmark me-1"></i>
+      {% endif %}
+      <span>{{ tweet.bookmarks.count|intcomma|default:0 }}</span>
+    </button>
+  </form>
+
   <i class="bi bi-upload"></i>
 </div>
 
@@ -39,5 +61,8 @@
   }
   .hover-text-success:hover {
     color: #198754 !important;
+  }
+  .hover-text-primary:hover {
+    color: #0d6efd !important;
   }
 </style>
