--- a/templates/_dropdown_menu_items.html
+++ b/templates/_dropdown_menu_items.html
@@ -17,7 +17,7 @@
   </a>
 </li>
 <li>
-  <a href="#" class="dropdown-item">
+  <a href="{% url "tweets:bookmark" %}" class="dropdown-item">
     <i class="bi bi-bookmark me-2"></i>
     <span>ブックマーク</span>
   </a>
