--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -20,7 +20,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-white">
+      <a href="{% url "tweets:bookmark" %}" class="nav-link text-white">
         <i class="bi bi-bookmark me-2"></i>
         <span>ブックマーク</span>
       </a>
