--- a/templates/_sidebar_icons_only.html
+++ b/templates/_sidebar_icons_only.html
@@ -17,7 +17,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-white">
+      <a href="{% url "tweets:bookmark" %}" class="nav-link text-white">
         <i class="bi bi-bookmark"></i>
       </a>
     </li>
