--- a/templates/tweets/_tweet.html
+++ b/templates/tweets/_tweet.html
@@ -21,7 +21,7 @@
             @{{ tweet.user.username }}・{{ tweet.created_at|date:"m月d日 H:i" }}
           </small>
         </div>
-        <div class="btn-group z-2">
+        <div class="btn-group z-3">
           <button class="btn text-white" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
             <i class="bi bi-three-dots"></i>
           </button>
@@ -48,6 +48,11 @@
                     </button>
                   {% endif %}
                 </form>
+              <li>
+              <li>
+                <a href="{% url "direct_messages:message_room" tweet.user.username %}" class="dropdown-item btn">
+                  {{ tweet.user.username }}さんにメッセージ
+                </a>
               <li>
             {% endif %}
           </ul>
